# cmake-making-library-tutorial

./: CMakeLists.txt  README.md  main.cpp
cmake/: yourlib.def  yourlib.exp  yourlib.map
cmake/cfg/: file1.csv  file2.csv
cmake/cfg/subfolder/: fileinfolder.csv
include/: yourlib.h
src/: CMakeLists.txt  cpp.cpp  hpp.hpp  source1.c  source1.h  source2.c  source2.h
